Made OTT always have scrollbar to avoid problems from dynamically acquiring it

--- a/css/intermediary.css
+++ b/css/intermediary.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+html,body {
+	height: 100%;
+	margin-bottom:1px;
+}
+
 body {
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:13px;
